Use Collectors.toList()
Signed-off-by: azerr <azerr@redhat.com>